<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:title="@string/menu_label_modulo_pre_inscripcion">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_pre_inscripcion"
                    android:icon="@drawable/ic_baseline_assignment_24"
                    android:title="@string/pre_inscripcion" />
                <item
                    android:id="@+id/nav_menu_ofertas"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_ofertas" />
            </group>
        </menu>
    </item>


    <item android:title="@string/menu_label_muestra">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_aplicacion_oferta"
                    android:icon="@drawable/ic_assignment_turned_in_black_24dp"
                    android:title="@string/menu_ofertas_aplicacion" />
            </group>
        </menu>
    </item>


</menu>
