<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cecar.edu.siga.vistas.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.cecar.edu.siga.vistas.ui.home.HomeFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_pre_inscripcion"
        android:name="com.cecar.edu.siga.vistas.ui.preinscripcion.PreInscripcionFragment"
        android:label="@string/pre_inscripcion"
        tools:layout="@layout/fragment_pre_inscripcion" />

    <fragment
        android:id="@+id/nav_menu_ofertas"
        android:name="com.cecar.edu.siga.vistas.ui.ofertas.OfertasFragment"
        android:label="@string/menu_ofertas"
        tools:layout="@layout/fragment_ofertas" />

    <fragment
        android:id="@+id/nav_aplicacion_oferta"
        android:name="com.cecar.edu.siga.vistas.ui.aplicacionOferras.AplicacionOfertaFragment"
        android:label="@string/menu_ofertas_aplicacion" />

</navigation>